--- a/app/public/js/bower.json
+++ b/app/public/js/bower.json
@@ -27,6 +27,8 @@
     "angular-ui": "^0.4.0",
     "angular": "^1.5.5",
     "bootstrap": "^3.3.6",
-    "angular-ui-router": "^0.3.0"
+    "angular-ui-router": "^0.3.0",
+    "angular-animate": "^1.5.5",
+    "ammap3": "^3.20.5"
   }
 }
