edited script, downloaded job sample page, edited gitignore file to ignore macos filesystem files

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@ bower_components
 *.war
 *.ear
 
+# mac osx filesystem #
+.DS_Store
+*/.DS_Store
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
