--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Java/src"/>
-	<classpathentry kind="lib" path="Java/tools/mongodb/lib/bson-2.13.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="Java/tools/mongodb/lib/bson-2.13.1.jar"/>
-	<classpathentry kind="lib" path="Java/tools/mongodb/lib/mongo-java-driver-2.13.1-javadoc.jar"/>
-	<classpathentry kind="lib" path="Java/tools/mongodb/lib/mongo-java-driver-2.13.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="Java/bin"/>
 </classpath>
